tests/fixtures/pass/strict-nested-src-files/.chous
in src:
  allow *.ts
  strict files
