tests/fixtures/fail/allow-nested-violation/.chous
in docs:
  allow *.md
  strict files
